<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:background="#2BAAF7"
    tools:context="com.sofientouati.exp.MainActivity">

    >
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_maktba"
        android:contentDescription="@string/logo"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"/>


    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFf"
            android:layout_above="@+id/input_layout_password"
            android:layout_alignParentStart="true"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <android.support.v7.widget.AppCompatEditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:backgroundTint="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:id="@+id/input_emaail"
                android:layout_alignTop="@+id/imgLogo"

                android:autoText="true">
            </android.support.v7.widget.AppCompatEditText>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
    android:id="@+id/input_layout_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
            android:layout_above="@+id/Chkforgot"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="46dp"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:backgroundTint="#fff"
            android:id="@+id/input_password"
            android:layout_above="@+id/input_layout_password"
            android:layout_alignParentStart="true"
            android:imeOptions="actionDone"
            android:autoText="false"
            android:drawableRight="@drawable/ic_action_visibility">
        </android.support.v7.widget.AppCompatEditText>
    </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot"
            android:id="@+id/Chkforgot"
            android:textColorHighlight="#fff"

            android:textColor="#fff"
            android:checked="false"

            android:textSize="10sp"
            android:layout_marginBottom="76dp"
            android:layout_above="@+id/buttonBarLayout"
            android:layout_alignParentStart="true" />



        <LinearLayout
        android:id="@+id/buttonBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
            android:divider="@drawable/divider"
            android:showDividers="middle"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip" />

        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:divider="@drawable/divider"
            android:showDividers="middle"
            android:orientation="horizontal" >

            <Button
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff"
                android:text="Sign up"
                android:id="@+id/btnSingUp"/>

            <Button
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#fff"
                android:text="Sign in"
                android:id="@+id/btnSignIn"/>
        </LinearLayout>

    </LinearLayout>


    </RelativeLayout>



</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>